--- a/library-core/src/main/res/values/attrs.xml
+++ b/library-core/src/main/res/values/attrs.xml
@@ -43,8 +43,12 @@
     <!-- Refer to https://gist.github.com/chrisbanes/9091754 for original code -->
     <declare-styleable name="ForegroundLinearLayout">
         <attr name="android:foreground" />
-        <attr name="foregroundInsidePadding" />
+        <attr name="android:foregroundInsidePadding" />
         <attr name="android:foregroundGravity" />
+
+        <attr name="foreground" format="color" />
+        <attr name="foregroundGravity" format="integer" />
+        <attr name="foregroundInsidePadding" format="boolean" />
     </declare-styleable>
 
     <!-- Used in card with list-->
